--- a/piedraPapelTijera.html
+++ b/piedraPapelTijera.html
@@ -11,20 +11,20 @@
             jugador = prompt(nombrejugador + " Elije: 1 para Piedra, 2 para Papel, 3 para tijera")
             //alert("Elegiste " + jugador)
             if(jugador==1) {
-                alert(nombrejugador + " Elegiste Piedra")
+                alert(nombrejugador + " Elegiste 🪨")
             }
             else if(jugador==2) {
-                alert(nombrejugador + " Elegiste Papel")
+                alert(nombrejugador + " Elegiste 📃")
             }
             else if  (jugador==3) {
-                alert(nombrejugador + " Elegiste Tijera")
+                alert(nombrejugador + " Elegiste ✂️")
             }
             else {
                 alert(nombrejugador + " La CARLITOS mi Brodi")
             }
         </script>
         <body>
-            <h1>Pieddra, Papel o Tijera AVANZADA</h1>
+            <h1>Pieddra, Papel o Tijera</h1>
         </body>
     </head>
 </html>
