--- a/piedraPapelTijera.html
+++ b/piedraPapelTijera.html
@@ -22,6 +22,26 @@
             else {
                 alert(nombrejugador + " La CARLITOS mi Brodi")
             }
+
+            if(pc==1) {
+                alert( " PC eligió 🪨")
+            }
+            else if(pc==2) {
+                alert("PC eligió 📃")
+            }
+            else if  (pc==3) {
+                alert("PC eligió ✂️")
+            }
+            else {
+                alert("La CARLITOS la PC")
+            }
+
+            //COMBATE ENTRE JUGADOR Y PC
+
+            if(pc==jugador){
+                alert("EMPATARON")
+            }
+
         </script>
         <body>
             <h1>Pieddra, Papel o Tijera</h1>
