Terminando de insertar las condiciones

--- a/piedraPapelTijera.html
+++ b/piedraPapelTijera.html
@@ -41,6 +41,24 @@
             if(pc==jugador){
                 alert("EMPATARON")
             }
+            else if (jugador==1 && pc==2){
+                alert("La PC GANA")
+            }
+            else if (jugador==1 && pc==3){
+                alert(nombrejugador + " GANASTE")
+            }
+            else if(jugador==2 && pc==1) {
+                alert(nombrejugador + " GANASTE")
+            }
+            else if(jugador==2 && pc==3) {
+                alert("GANO LA PC")
+            }
+            else if(jugador==3 && pc==1){
+                alert("LA PC GANA")
+            }
+            else if(jugador==3 && pc==2) {
+                alert(nombrejugador + "GANASTE JATE JATE")
+            }
 
         </script>
         <body>
