--- a/piedraPapelTijera.html
+++ b/piedraPapelTijera.html
@@ -4,11 +4,12 @@
         <meta charset="utf-8" />
         <title>Piedra, Papel o Tijera </title>
         <script>
+            function aleatorio (min, max) {
+                return Math.floor ( Math.random() * (max - min + 1) + min)
+            }
             // 1 es Piedra, 2 es Papel y 3 es Tijera
             let jugador = 0
-            let min = 1
-            let max = 3
-            let pc = Math.floor ( Math.random() * (max - min + 1) + min)
+            let pc = aleatorio(1,3)
             let nombrejugador = prompt("Cual es tu nombre CHE? ")
             jugador = prompt(nombrejugador + " Elije: 1 para Piedra, 2 para Papel, 3 para tijera")
             //alert("Elegiste " + jugador)
